# CPPLibraryTemplate

./: .gitignore  CMakeLists.txt  ImportAutoGroupFunction.cmake  ImportHeadersHelper.cmake  README.md  customlib-config.cmake
builder_local/: README.md  builder.config.json  local.py
builder_local/config/: ProjectVersion-config.cmake  ProjectVersion.h.in  config.json
builder_local/config/option-config-cmake/: app.option.config.cmake
builder_local/depends/: .gitattributes  Info.plist  calcMd5.py  config.bat  config.sh  default.config.bat  default.config.sh  git.deploy.config.bat  git.deploy.config.sh  pack_utils.py
builder_local/jenkins/: Jenkinsfile  build.bat  build.sh  check-version.sh  clean.bat  clean.sh  tag.sh
builder_local/macos/: deploy_clean.py  macos.build.sh  publish.sh
builder_local/py/: clean-config.json  clean_redundant_content.py
builder_local/windows/: publish.bat  windows.build64.bat
src/: Version.cpp  Version.h
src/example/: main.cpp
src/example/utils/: utils.cpp  utils.h
src/header/: Define.h  LogCallback.h  LogLevelDefine.h  Version.h
src/log/: LogCallback.cpp  log.cpp  log.h
src/utils/: File.cpp  File.h  PathUtils.cpp  PathUtils.h  StrUtils.cpp  StrUtils.h
